@@ -3,6 +3,8 @@ Valgrind-2.1.X will interfere with writeactive, break fchmod.
 Use Valgrind 2.0.
 |
 Changes since 20040818a:
+- Bugfix: only_group_pcre now also applies to delaybody groups. Reported
+  by Cory C. Albrecht.
 - Bugfix: diagnose errors when getting articles marked for download
 - Change: delaybody article numbers are now stored with a time stamp
   rather than a retry count and subjected to group or global expiry.
